add: image frome market

--- a/index.html
+++ b/index.html
@@ -250,11 +250,11 @@
   <!-- image_market -->
 
   <div class="w-3/4 md:flex hidden flex-wrap justify-around items-center mx-auto my-20">
-    <img class="my-2" height="47" width="160" src="./img/market/app_store.svg" alt="" />
-    <img class="my-2" height="47" width="160" src="./img/market/bazaar.png" alt="" />
-    <img class="my-2" height="47" width="160" src="./img/market/direct-download-badge.png" alt="" />
-    <img class="my-2" height="47" width="160" src="./img/market/myketmarket.png" alt="" />
-    <img class="my-2" height="47" width="160" src="./img/market/snapp-pwa.png" alt="" />
+    <img class="my-2" height="47" width="160" src="./src/img/market/app_store.svg" alt="" />
+    <img class="my-2" height="47" width="160" src="./src/img/market/bazaar.jpg" alt="" />
+    <img class="my-2" height="47" width="160" src="./src/img/market/direct-download-badge.jpg" alt="" />
+    <img class="my-2" height="47" width="160" src="./src/img/market/myketmarket.jpg" alt="" />
+    <img class="my-2" height="47" width="160" src="./src/img/market/snapp-pwa.jpg" alt="" />
   </div>
 
   <!-- image_market -->
@@ -401,7 +401,7 @@
 
       <div class="lg:w-3/4 w-full flex mx-auto flex-wrap justify-between mb-10">
         <div class="lg:w-[48%] w-11/12 mx-auto bg-white rounded-xl flex lg:flex-row flex-col mt-7 px-9 py-10">
-          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./img/icons/super_app_icon/more/180x100-benefits.png"
+          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./src/img/icons/super_app_icon/more/180x100-benefits.png"
             alt="" />
           <div>
             <h1 class="font-iran_Bold text-text_bg">
@@ -414,8 +414,9 @@
             </p>
           </div>
         </div>
+
         <div class="lg:w-[48%] w-11/12 mx-auto bg-white rounded-xl flex lg:flex-row flex-col mt-7 px-9 py-10">
-          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./img/icons/super_app_icon/more/180x100-benefits.png"
+          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./src/img/icons/super_app_icon/more/180x100-carfix.png"
             alt="" />
           <div>
             <h1 class="font-iran_Bold text-text_bg">
@@ -428,8 +429,9 @@
             </p>
           </div>
         </div>
+
         <div class="lg:w-[48%] w-11/12 mx-auto bg-white rounded-xl flex lg:flex-row flex-col mt-7 px-9 py-10">
-          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./img/icons/super_app_icon/more/180x100-benefits.png"
+          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./src/img/icons/super_app_icon/more/180x100-hour.png"
             alt="" />
           <div>
             <h1 class="font-iran_Bold text-text_bg">
@@ -442,8 +444,9 @@
             </p>
           </div>
         </div>
+
         <div class="lg:w-[48%] w-11/12 mx-auto bg-white rounded-xl flex lg:flex-row flex-col mt-7 px-9 py-10">
-          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./img/icons/super_app_icon/more/180x100-benefits.png"
+          <img class="lg:w-[120px] lg:h-[66px] w-[80px]" src="./src/img/icons/super_app_icon/more/180x100-income.png"
             alt="" />
           <div>
             <h1 class="font-iran_Bold text-text_bg">
