add: nemad images

--- a/index.html
+++ b/index.html
@@ -573,10 +573,10 @@
 
       <div class="flex dark:bg-white dark:p-4 rounded-md">
         <a href="">
-          <img src="./img/namad/logo.png" class="mx-3" width="130" height="130" alt="" />
+          <img src="./src/img/namad/logo.png" class="mx-3" width="130" height="130" alt="" />
         </a>
         <a href="">
-          <img src="./img/namad/namad.png" class="mx-3" width="130" height="130" alt="" />
+          <img src="./src/img/namad/namad.png" class="mx-3" width="130" height="130" alt="" />
         </a>
       </div>
     </div>
