--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
       </div>
     </div>
 
-    <img src="./img/intro_desktop.jpg" class="hidden md:flex md:w-1/3 lg:w-1/2 object-cover"
+    <img src="./src/img/intro_desktop.jpg" class="hidden md:flex md:w-1/3 lg:w-1/2 object-cover"
       style="transform: scaleX(-1)" alt="" />
   </div>
   <!-- intro -->
