add: slider images and fixed some errors

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <div>
       <div class="w-full flex lg:flex-row flex-col">
         <div class="w-full xl:w-1/2 xl:h-auto">
-          <img src="./img/slider/super-app.jpg" class="object-cover w-full xl:h-auto h-[215px]" alt="" />
+          <img src="./src/img/slider/super-app.jpg" class="object-cover w-full xl:h-auto h-[215px]" alt="" />
         </div>
 
         <div class="w-full xl:w-1/2 text-right flex justify-start">
@@ -332,7 +332,7 @@
         <div class="flex xl:flex-nowrap flex-wrap justify-around xl:w-2/3 w-full mx-auto">
           <div class="basis-[245px] my-5">
             <div class="bg-bg_gray rounded-3xl">
-              <img src="./img/icons/super_app_icon/210x190-easy.png" width="210" height="190" alt="" />
+              <img src="./src/img/icons/super_app_icon/210x190-easy.png" width="210" height="190" alt="" />
             </div>
             <div class="px-4 my-3">
               <h6 class="text-right font-iran_Bold my-3 dark:text-white">
@@ -346,7 +346,7 @@
           </div>
           <div class="basis-[245px] my-5">
             <div class="bg-bg_gray rounded-3xl">
-              <img src="./img/icons/super_app_icon/210x190-fast.png" width="210" height="190" alt="" />
+              <img src="./src/img/icons/super_app_icon/210x190-fast.png" width="210" height="190" alt="" />
             </div>
             <div class="px-4 my-3">
               <h6 class="text-right font-iran_Bold my-3 dark:text-white">
@@ -360,7 +360,7 @@
           </div>
           <div class="basis-[245px] my-5">
             <div class="bg-bg_gray rounded-3xl">
-              <img src="./img/icons/super_app_icon/210x190-eco.png" width="210" height="190" alt="" />
+              <img src="./src/img/icons/super_app_icon/210x190-eco.png" width="210" height="190" alt="" />
             </div>
             <div class="px-4 my-3">
               <h6 class="text-right font-iran_Bold my-3 dark:text-white">
