add style frome background

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="rtl" class="dark">
+<html lang="en" dir="rtl" class="">
 
 <head>
   <meta charset="UTF-8" />
@@ -7,6 +7,12 @@
   <title>وب سایت اسنپ</title>
   <link rel="stylesheet" href="./output.css" />
   <link rel="shortcut icon" href="./src/img/Untitled.png" type="image/x-icon" />
+  <style>
+    .snap_icons {
+      background-color: silver;
+      border-radius: 20px;
+    }
+  </style>
 </head>
 
 <body class="dark:bg-bg_dark1">
@@ -330,7 +336,7 @@
 
       <div class="w-full xl:translate-y-[-100px] translate-y-7">
         <div class="flex xl:flex-nowrap flex-wrap justify-around xl:w-2/3 w-full mx-auto">
-          <div class="basis-[245px] my-5">
+          <div class="snap_icons basis-[245px] my-5">
             <div class="bg-bg_gray rounded-3xl">
               <img src="./src/img/icons/super_app_icon/210x190-easy.png" width="210" height="190" alt="" />
             </div>
@@ -344,7 +350,7 @@
               </p>
             </div>
           </div>
-          <div class="basis-[245px] my-5">
+          <div class="snap_icons basis-[245px] my-5">
             <div class="bg-bg_gray rounded-3xl">
               <img src="./src/img/icons/super_app_icon/210x190-fast.png" width="210" height="190" alt="" />
             </div>
@@ -358,7 +364,7 @@
               </p>
             </div>
           </div>
-          <div class="basis-[245px] my-5">
+          <div class="snap_icons basis-[245px] my-5">
             <div class="bg-bg_gray rounded-3xl">
               <img src="./src/img/icons/super_app_icon/210x190-eco.png" width="210" height="190" alt="" />
             </div>
