add comment frome all dark mode and GitHub button

--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
             d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5" />
         </svg>
         <div class="flex">
+          <!-- dark mode mobile -->
           <div class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
             D
           </div>
+          <!-- GitHub mobile -->
           <div class="aboutMe flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
             <a href="">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128" width="30">
@@ -113,9 +115,11 @@
             </li>
           </ul>
         </li>
+        <!-- dark mode desktop -->
         <li class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
           D
         </li>
+        <!-- GitHub desktop -->
         <li class="aboutMe flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
           <a href="">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 128 128" width="30">
