add moon icone in dark mode

--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
         </svg>
         <div class="flex">
           <!-- dark mode mobile -->
-          <div class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
-            D
-          </div>
+          <div class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about"></div>
           <!-- GitHub mobile -->
           <div class="aboutMe flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
             <a href="">
@@ -116,9 +114,7 @@
           </ul>
         </li>
         <!-- dark mode desktop -->
-        <li class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
-          D
-        </li>
+        <li class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about"></li>
         <!-- GitHub desktop -->
         <li class="aboutMe flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
           <a href="">
