--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about"></div>
           <!-- GitHub mobile -->
           <div class="aboutMe flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
-            <a href="" target="_blank">
+            <a href="https://github.com/TahaDaneshi" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path
@@ -119,7 +119,7 @@
         <li class="darkMode flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about"></li>
         <!-- GitHub desktop -->
         <li class="aboutMe flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
-          <a href="" target="_blank">
+          <a href="https://github.com/TahaDaneshi" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
               stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
               <path
