fixed bug in menue lists

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
       <ul
         class="text-clamp list-none dark:text-white justify-start items-center font-iran_Light mx-7 h-[55px] md:flex hidden">
-        <li class="flex items-center relative cursor-default group/item hover:text-green_snap">
+        <li class="flex items-center relative cursor-default group/item hover:text-green_snap" style="padding: 20px 0;">
           سوپراپ اسنپ
           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
             class="bi bi-chevron-down mx-2" viewBox="0 0 16 16">
@@ -59,7 +59,8 @@
           </svg>
 
           <ul
-            class="group-hover/item:flex hidden w-[170px] absolute top-6 list-none text-text_nav dark:text-white bg-white dark:bg-bg_dark2 border border-1 flex-col justify-start items-start font-iran_Light rounded-lg leading-9">
+            class="group-hover/item:flex hidden w-[170px] absolute list-none text-text_nav dark:text-white bg-white dark:bg-bg_dark2 border border-1 flex-col justify-start items-start font-iran_Light rounded-lg leading-9"
+            style="top: 63px;">
             <li class="flex items-center cursor-pointer px-4 py-1 hover:text-green_snap">
               test1
             </li>
@@ -89,7 +90,8 @@
         <li class="flex items-center cursor-pointer px-4 py-1 hover:text-green_snap">
           بلاگ
         </li>
-        <li class="flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about">
+        <li class="flex items-center cursor-pointer px-4 py-1 hover:text-green_snap group/item_about"
+          style="padding: 20px 0;">
           درباره اسنپ
           <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor"
             class="bi bi-chevron-down mx-2" viewBox="0 0 16 16">
