change text-right to text-center in number phone

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </p>
 
         <div class="md:flex w-full justify-start hidden">
-          <input type="text" class="bg-transparent border-b-2 outline-none mx-3 placeholder-white text-right py-1"
+          <input type="text" class="bg-transparent border-b-2 outline-none mx-3 placeholder-white text-center py-1"
             dir="ltr" placeholder="09*********" />
 
           <div class="bg-white text-green_snap cursor-pointer font-iran_Light rounded-md px-5 py-2">
